added app functionality, added time, added menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fake OS</title>
         <link rel="stylesheet" href="./styles.css" />
-        <script src="./DOM.js" defer></script>
+        <script src="./DOM.js" defer type="module"></script>
     </head>
     <body>
         <!-- <img
@@ -44,8 +44,8 @@
                     <figcaption>Place kitten</figcaption>
                 </figure>
             </div>
-            <div class="openedMenu"></div>
-            <div class="openedApp"></div>
+            <!-- <div class="openedApp"></div> -->
+            <!-- <div class="openedMenu"></div> -->
         </section>
         <footer>
             <img
@@ -53,6 +53,7 @@
                 alt=""
                 id="menu"
             />
+            <div id="dateTime"></div>
         </footer>
     </body>
 </html>
