--- a/index.html
+++ b/index.html
@@ -44,8 +44,122 @@
                     <figcaption>Place kitten</figcaption>
                 </figure>
             </div>
-            <!-- <div class="openedApp"></div> -->
-            <!-- <div class="openedMenu"></div> -->
+            <div class="openedApp openedApp__notepad" style="display: none">
+                <div class="appTop">
+                    Notepad
+                    <img
+                        src="./Icons/icons8-x-button-24.png"
+                        alt=""
+                        class="closeBtn"
+                        id="closeBtnNotepad"
+                    />
+                </div>
+                <textarea name="" id="" cols="55" rows="24 "></textarea>
+            </div>
+            <div class="openedApp openedApp__internet" style="display: none">
+                <div class="appTop">
+                    Internet
+                    <img
+                        src="./Icons/icons8-x-button-24.png"
+                        alt=""
+                        class="closeBtn"
+                        id="closeBtnInternet"
+                    />
+                </div>
+                <h1>Internet</h1>
+                <form id="form">
+                    <input type="text" />
+                    <button id="submitBtn">Submit</button>
+                </form>
+            </div>
+            <div class="openedApp openedApp__placeKitten" style="display: none">
+                <div class="appTop">
+                    Place Kitten
+                    <img
+                        src="./Icons/icons8-x-button-24.png"
+                        alt=""
+                        class="closeBtn"
+                        id="closeBtnPlaceKitten"
+                    />
+                </div>
+            </div>
+            <div class="openedMenu" style="display: none">
+                <ul>
+                    <li>
+                        <img
+                            src="./Icons/notepad.png"
+                            alt=""
+                            class="apps__icon"
+                        />
+                        Notepad
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/internet-explorer.png"
+                            alt=""
+                            class="apps__icon"
+                        />
+                        Internet Explorer
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/placekitten.jpg"
+                            alt=""
+                            class="apps__icon"
+                        />
+                        Place Kitten
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-file-explorer-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />File Explorer
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-settings-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />Settings
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-downloads-folder-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />Downloads
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-documents-folder-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />Documents
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-important-mail-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />Mail
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-visual-studio-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />Visual Studio
+                    </li>
+                    <li>
+                        <img
+                            src="./Icons/icons8-console-48.png"
+                            alt=""
+                            class="apps__icon"
+                        />Console
+                    </li>
+                </ul>
+            </div>
         </section>
         <footer>
             <img
